some extra functionality

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -4,5 +4,6 @@
 		<title>IzzyQuizz | Quiz taking application for everyone </title>
 	</head>
 	<body>
+		MIT AFRICAN STUDENTS ASSOCIATION
 	</body>
 </html>
