--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -5,5 +5,6 @@
 	</head>
 	<body>
 		MIT AFRICAN STUDENTS ASSOCIATION
+		If not logged in, <a href="/oauth2callback"> click here</a>
 	</body>
 </html>
