inner workings of serving

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>IzzyQuizz | Quiz taking application for everyone </title>
+		<title>MIT ASA QUIZ</title>
+		<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+      		<link rel = "stylesheet" <link rel="stylesheet" 
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+		<script 
+   			src="https://code.jquery.com/jquery-3.2.1.min.js"
+  			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+ 			 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 	</head>
 	<body>
-		MIT AFRICAN STUDENTS ASSOCIATION
+		WELCOME TO MIT AFRICAN STUDENTS ASSOCIATION
 		If not logged in, <a href="/oauth2callback"> click here</a>
+		<script>
+			console.log("this is working pretty well")
+		</script>
 	</body>
 </html>
