jasmine test framework for testing javascript activated

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>MIT ASA QUIZ</title>
-		<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+			<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
       		<link rel = "stylesheet" <link rel="stylesheet" 
 			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 		<script 
@@ -14,8 +14,9 @@
 	<body>
 		WELCOME TO MIT AFRICAN STUDENTS ASSOCIATION
 		If not logged in, <a href="/oauth2callback"> click here</a>
-		<script>
-			console.log("this is working pretty well")
-		</script>
+		<div id="welcome_card"></div>
+		<script src="/closure/goog/base.js"></script>
+		<script src="/js/module_tools.js"></script>
+		<script src="/js/home_init.js"></script>
 	</body>
 </html>
