--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -12,11 +12,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 	</head>
 	<body>
-		WELCOME TO MIT AFRICAN STUDENTS ASSOCIATION
-		If not logged in, <a href="/oauth2callback"> click here</a>
+		WELCOME TO MIT AFRICAN STUDENTS ASSOCIATION<br>
+		It seems like you are not logged in.<a href="/oauth2callback"> Click here to login</a>
 		<div id="welcome_card"></div>
 		<script src="/closure/goog/base.js"></script>
 		<script src="/js/module_tools.js"></script>
 		<script src="/js/home_init.js"></script>
+		<script src="/js/home_widget.js"></script>
 	</body>
 </html>
