--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MIT ASA QUIZ</title>
+		<title>MIT ASA QUIZ 2017</title>
 			<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
-      		<link rel = "stylesheet" <link rel="stylesheet" 
+      		<link rel = "stylesheet" rel="stylesheet" 
 			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+			<link rel="stylesheet" type="text/css" href="/static/home_styles.css">
 		<script 
    			src="https://code.jquery.com/jquery-3.2.1.min.js"
   			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
  			 crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 	</head>
-	<body>
-		WELCOME TO MIT AFRICAN STUDENTS ASSOCIATION<br>
-		It seems like you are not logged in.<a href="/oauth2callback"> Click here to login</a>
+	<body class='z-depth-2'>
 		<div id="welcome_card"></div>
 		<script src="/closure/goog/base.js"></script>
 		<script src="/js/module_tools.js"></script>
