user displayed correctly

--- a/project/templates/quiz.html
+++ b/project/templates/quiz.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ASA QUIZ</title>
+		<title>MIT ASA QUIZ 2017</title>
+			<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+      		<link rel = "stylesheet" rel="stylesheet" 
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+			<link rel="stylesheet" type="text/css" href="/static/quiz_styles.css">
+		<script 
+   			src="https://code.jquery.com/jquery-3.2.1.min.js"
+  			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+ 			 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 	</head>
-	<body>
-		ONGOING QUIZ - MIT AFRICAN STUDENTS ASSOCIATION
+	<body class='z-depth-2'>
+		<h3>MIT African Students Association </h3>
+		<script src="/closure/goog/base.js"></script>
+		<script src="/js/module_tools.js"></script>
+		<script src="/js/xhr_service.js"></script>
+		<script src="/js/quiz_init.js"></script>
+		<script src="/js/quiz_widget.js"></script>
 	</body>
 </html>
