admin can display questions

--- a/project/templates/manage.html
+++ b/project/templates/manage.html
@@ -14,10 +14,15 @@
 	</head>
 	<body class='z-depth-2'>
 		<h3>MIT African Students Association </h3>
+		<div id="newQuestionHolder"></div>
+		<div id="questionsHolder"></div>
+		<div id="roundsHolder"></div>
+		<div id="newRoundHolder"></div>
+		<div></div>
 		<script src="/closure/goog/base.js"></script>
 		<script src="/js/module_tools.js"></script>
 		<script src="/js/xhr_service.js"></script>
-		<script src="/js/manage_init.js"></script>
-		<script src="/js/manage_widget.js"></script>
+		<script src="/js/manage/init.js"></script>
+		<script src="/js/manage/widget.js"></script>
 	</body>
 </html>
