--- a/project/templates/quiz.html
+++ b/project/templates/quiz.html
@@ -15,7 +15,7 @@
 	<body>
 		<h3>MIT African Students Association</h3>
 		<div id="user_data"></div>
-		<p class="instructions"><em>Welcome to MIT ASA Trivia Portal. Please answer the questions below, 
+		<p class="instructions" id="instructions"><em>Welcome to MIT ASA Trivia Portal. Please answer the questions below, 
 		<br>and press the submit button below the questions to submit 
 		your answers and check your results</em></p>
 		<div id="quizHolder" class="z-depth-1"></div>
