--- a/project/templates/quiz.html
+++ b/project/templates/quiz.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MIT ASA QUIZ 2017</title>
-			<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
-      		<link rel = "stylesheet" rel="stylesheet" 
+		<title>MIT ASA Trivia 2017</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+      	<link rel = "stylesheet" rel="stylesheet" 
 			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-			<link rel="stylesheet" type="text/css" href="/static/quiz_styles.css">
+		<link rel="stylesheet" type="text/css" href="/static/quiz_styles.css">
 		<script 
    			src="https://code.jquery.com/jquery-3.2.1.min.js"
   			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -16,13 +17,14 @@
 		<h3>MIT African Students Association</h3>
 		<div id="user_data"></div>
 		<p class="instructions" id="instructions"><em>Welcome to MIT ASA Trivia Portal. Please answer the questions below, 
-		<br>and press the submit button below the questions to submit 
-		your answers and check your results</em></p>
-		<div id="quizHolder" class="z-depth-1"></div>
+		<br>and click the submit button below the questions to submit 
+		your answers</em></p>
+		<div id="quizHolder"></div>
 		<script src="/closure/goog/base.js"></script>
 		<script src="/js/module_tools.js"></script>
 		<script src="/js/xhr_service.js"></script>
 		<script src="/js/quiz_init.js"></script>
 		<script src="/js/quiz/widget.js"></script>
+		<noscript><h4>Your browser does not support javascript. Please enable javascript to able to access our website.</h4></noscript>
 	</body>
 </html>
