--- a/project/templates/results.html
+++ b/project/templates/results.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>IzzyQuizz | Quiz taking application for everyone </title>
+		<title>MIT Trivia Night Results </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+      	<link rel = "stylesheet" rel="stylesheet" 
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+		<link rel="stylesheet" type="text/css" href="/static/results_styles.css">
+		<script 
+   			src="https://code.jquery.com/jquery-3.2.1.min.js"
+  			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+ 			 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 	</head>
 	<body>
-		<h1>Results</h1>
+		<h3>MIT African Students Association</h3>
+		<p class="main_title" id="main_title"><h5><em>Cultural Night Trivia Results</em></h5></p>
+		<div id="resultsHolder" class="z-depth-1"></div>
+		<script src="/closure/goog/base.js"></script>
+		<script src="/js/module_tools.js"></script>
+		<script src="/js/xhr_service.js"></script>
+		<script src="/js/quiz_init.js"></script>
+		<script src="/js/results/widget.js"></script>
+		<noscript><h4>Your browser does not support javascript! Please enable javascript to be able to access our website</h4></noscript>
 	</body>
 </html>
+
