--- a/project/templates/quiz.html
+++ b/project/templates/quiz.html
@@ -21,7 +21,7 @@
 		your answers</em></p>
 		<div id="quizHolder"></div>
 
-		<div><p id="announcement"><em>Note: If you can't see the questions above, please upgrade your browser. For iPhone/Safari users, you can do this by upgrading your IOS Software  and using Safari, or using a recent version of Google Chrome. If you're using another device, we recommend using a new version of Chrome or Firefox. You can also borrow your friend's device if theirs is working. Good luck :)</em></p></div>
+		<div><p id="announcement"><em>Note: If the game is active and you can't see multiple choice questions above, please upgrade your browser. For iPhone/Safari users, you can do this by upgrading your IOS Software  and using Safari, or using a recent version of Google Chrome. If you're using another device, we recommend using a new version of Chrome or Firefox. You can also borrow your friend's device if theirs is working. Good luck :)</em></p></div>
 		<script src="/closure/goog/base.js"></script>
 		<script src="/js/module_tools.js"></script>
 		<script src="/js/xhr_service.js"></script>
